Fix View More button centering: use flex justify-content instead of text-align

--- a/css/style.css
+++ b/css/style.css
@@ -994,7 +994,8 @@ body {
 }
 /* View More button */
 .view-more-wrap {
-  text-align: center;
+  display: flex;
+  justify-content: center;
   margin-top: 28px;
 }
 .view-more-btn {
